# station-nanna

./: pyproject.toml  readme.md
scripts/: setup.sh
src/: data.json  main.py
src/routes/: controls.py  error_handling.py  memory.py  player.py  testing.py
